--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <title>Alien Black</title>
     <link rel="stylesheet" type="text/css" href="css/bbui-min.css"></link>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"></link>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css"></link>
     <link rel="stylesheet" type="text/css" href="css/styles.min.css"></link>
     <script type="text/javascript" src="js/bbui-min.js"></script>
     <script type="text/javascript" src="local:///chrome/webworks.js"></script>
     <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/reddit.js"></script>
     <script type="text/javascript">
       function ready() {
         bb.init();
