front page styling + mustache

--- a/frontpage.html
+++ b/frontpage.html
@@ -19,3 +19,22 @@
     });
   });
 </script>
+
+<script id="linkTemplate" type="text/template">
+  <div class="link-section">
+    <div class="container">
+      <div class="row">
+        <div class="span12">{{title}}</div>
+      </div>
+    </div>  
+  </div>
+  <div class="details-section">
+    <div class="container">
+      <div class="row">
+        <div class="span12">
+          <span class="subreddit">{{subreddit}}</span> • {{score}} • {{domain}} • {{author}}
+        </div>
+      </div>
+    </div>  
+  </div>
+</script>
