--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css"></link>
     <link rel="stylesheet" type="text/css" href="css/styles.min.css"></link>
     <meta charset="UTF-8" />
-    <script type="text/javascript" src="js/bbui-min.js"></script>
     <script type="text/javascript" src="local:///chrome/webworks.js"></script>
+    <script type="text/javascript" src="js/bbui-min.js"></script>
     <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/mustache.js"></script>
     <script type="text/javascript" src="js/bbui-reddit.js"></script>
     <script type="text/javascript" src="js/reddit.js"></script>
     <script type="text/javascript">
