NumComments. Checkpoint before trying out Bootstrap 3.

--- a/frontpage.html
+++ b/frontpage.html
@@ -22,9 +22,12 @@
 
 <script id="linkTemplate" type="text/template">
   <div class="link-section">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <div class="span12">{{title}}</div>
+        <div class="span10">
+          {{title}}
+        </div>
+        <div class="span2 comments">{{numComments}}</div>
       </div>
     </div>  
   </div>
