Bootstrap 3 didn't work out. Font Awesome instead.

--- a/frontpage.html
+++ b/frontpage.html
@@ -27,7 +27,10 @@
         <div class="span10">
           {{title}}
         </div>
-        <div class="span2 comments">{{numComments}}</div>
+        <div class="span2 comments">
+          <div class="comment-count">{{numComments}}</div>
+          <i class='icon-comment'></i>
+        </div>
       </div>
     </div>  
   </div>
