--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/bbui-min.css"></link>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"></link>
     <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css"></link>
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"></link>
     <link rel="stylesheet" type="text/css" href="css/styles.min.css"></link>
     <meta charset="UTF-8" />
     <script type="text/javascript" src="local:///chrome/webworks.js"></script>
