Design changes and hardcoded subreddits.

--- a/comments.html
+++ b/comments.html
@@ -1,14 +1,10 @@
 <div data-bb-type="screen" data-bb-indicator="true">
   <script type="text/javascript" src="js/comments.js"></script>
-  <div data-bb-type="title" data-bb-caption="Comments" data-bb-back-caption="Reddits"></div>
   <div id="linkHeader"></div>
   <div id="comments"></div>
-  <div data-bb-type="action-bar">
-    <div data-bb-type="action" data-bb-style="tab" data-bb-img="img/icons/ic_email.png"></div>
-    <div data-bb-type="action" data-bb-style="tab" data-bb-img="img/icons/ic_settings.png"></div>
-    <div data-bb-type="action" data-bb-style="tab" data-bb-img="img/icons/ic_add.png"></div>
-    <div data-bb-type="action" data-bb-style="button" data-bb-img="img/icons/ic_search.png"></div>
-    <div data-bb-type="action" data-bb-style="tab" data-bb-img="img/icons/ic_expand.png"></div>
+  <div data-bb-type="action-bar" data-bb-back-caption="Back">
+    <div data-bb-type="action" data-bb-style="button" data-bb-img="img/icons/ic_up.png">Downvote</div>
+    <div data-bb-type="action" data-bb-style="button" data-bb-img="img/icons/ic_down.png">Upvote</div>
   </div>
 </div>
 
