--- a/frontpage.html
+++ b/frontpage.html
@@ -1,14 +1,15 @@
 <div data-bb-type="screen" data-bb-indicator="true">
-  <div data-bb-type="title" data-bb-caption="Front Page" data-bb-back-caption="Reddits"></div>
+  <div data-bb-type="title" data-bb-caption="Front Page"></div>
   <div id="listing">
     
   </div>
   <div data-bb-type="action-bar">
-    <div data-bb-type="action" data-bb-style="tab" data-bb-img="img/icons/ic_email.png"></div>
-    <div data-bb-type="action" data-bb-style="tab" data-bb-img="img/icons/ic_settings.png"></div>
-    <div data-bb-type="action" data-bb-style="tab" data-bb-img="img/icons/ic_add.png"></div>
-    <div data-bb-type="action" data-bb-style="button" data-bb-img="img/icons/ic_search.png"></div>
-    <div data-bb-type="action" data-bb-style="tab" data-bb-img="img/icons/ic_expand.png"></div>
+    <div data-bb-type="action" data-bb-style="tab" data-bb-overflow="true" data-bb-img="img/icons/ic_view_list.png" data-bb-accent-text="Montreal Canadiens">habs</div>
+    <div data-bb-type="action" data-bb-style="tab" data-bb-overflow="true" data-bb-img="img/icons/ic_view_list.png" data-bb-accent-text="Call of Duty: Black Ops 2">blackops2</div>
+    <div data-bb-type="action" data-bb-style="tab" data-bb-overflow="true" data-bb-img="img/icons/ic_view_list.png" data-bb-accent-text="Heading to Montr\u00e9al this weekend. Suggestions?">montreal</div>
+    <div data-bb-type="action" data-bb-style="tab" data-bb-overflow="true" data-bb-img="img/icons/ic_view_list.png" data-bb-accent-text="Modern Warefare 3">mw3</div>
+    <div data-bb-type="action" data-bb-style="button" data-bb-img="img/icons/ic_settings.png">Settings</div>
+    <div data-bb-type="action" data-bb-style="button" data-bb-img="img/icons/ic_search.png">Search</div>
   </div>
 </div>
 
