--- a/subreddit.html
+++ b/subreddit.html
@@ -32,7 +32,7 @@
 </div>
 
 <script type="text/javascript">
-  listing(false, function(post) {
+  listing(params.subreddit, function(post) {
     bbifyPost(post, function(bbPost) {
       $(bbPost).appendTo('#listing');
     });
