--- a/subreddit.html
+++ b/subreddit.html
@@ -1,7 +1,7 @@
 <div data-bb-type="screen" data-bb-indicator="true">
-  <script type="text/javascript" src="js/frontpage.js"></script>
+  <script type="text/javascript" src="js/subreddit.js"></script>
   <div id="listing"></div>
-  <div id="frontPageActionBar" data-bb-type="action-bar">
+  <div id="actionBar" data-bb-type="action-bar">
     <div data-bb-type="action" data-bb-style="button" data-bb-img="img/icons/ic_settings.png">Settings</div>
     <div data-bb-type="action" data-bb-style="button" data-bb-img="img/icons/ic_search.png">Search</div>
   </div>
@@ -32,9 +32,13 @@
 </div>
 
 <script type="text/javascript">
-  listing(params.subreddit, function(post) {
-    bbifyPost(post, function(bbPost) {
-      $(bbPost).appendTo('#listing');
+  $(function() {
+    var subredditDefined = (typeof params !== "undefined" && typeof params.subreddit !== "undefined");
+    var subreddit =  subredditDefined ? params.subreddit : false;
+    listing(subreddit, function(post) {
+      bbifyPost(post, function(bbPost) {
+        $(bbPost).appendTo('#listing');
+      });
     });
   });
 </script>
