Tweaks for saving subreddit view state. Issue #1.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
                 subredditScreenReady(element, params);
             }
           });
-          bb.pushScreen('subreddit.html', 'subreddit');
+
+          bb.pushScreen('subreddit.html', 
+                        'subreddit', 
+                        {subreddit: 'frontpage'});
         });
       }
       window.addEventListener('load', function(e) {
