--- a/subreddit.html
+++ b/subreddit.html
@@ -1,5 +1,5 @@
-<div data-bb-type="screen" data-bb-indicator="true">
-  <script type="text/javascript" src="js/subreddit.js"></script>
+<div id="subreddit" data-bb-type="screen" data-bb-indicator="true">
+  <script type="text/javascript" src="js/subreddit.js" onunload="subredditUnload(this)"></script>
   <div id="loading" data-bb-type="activity-indicator" data-bb-size="large"></div>
   <div id="listing" style="display: none;"></div>
   <div id="actionBar" data-bb-type="action-bar">
