Supports resuming subreddit browsing. Issue #1

--- a/subreddit.html
+++ b/subreddit.html
@@ -1,4 +1,4 @@
-<div id="subreddit" data-bb-type="screen" data-bb-indicator="true">
+<div id="subreddit" data-bb-type="screen">
   <script type="text/javascript" src="js/subreddit.js" onunload="subredditUnload(this)"></script>
   <div id="loading" data-bb-type="activity-indicator" data-bb-size="large"></div>
   <div id="listing" style="display: none;"></div>
