Opens external content in embedded browser. Closes issue #5.

--- a/subreddit.html
+++ b/subreddit.html
@@ -10,8 +10,8 @@
     <div class="link-section">
       <div class="container-fluid">
         <div class="row">
-          <div class="span10">
-            {{title}}
+          <div class="span10 link-title">
+            {{&title}}
           </div>
           <div class="span2 comments">
             <div class="comment-count">{{numComments}}</div>
