--- a/subreddit.html
+++ b/subreddit.html
@@ -10,24 +10,40 @@
     <div class="link-section">
       <div class="container-fluid">
         <div class="row">
-          <div class="span10 link-title">
-            {{&title}}
-          </div>
-          <div class="span2 comments">
-            <div class="comment-count">{{numComments}}</div>
-            <i class='icon-comment'></i>
-          </div>
+          {{&linkDescription}}
         </div>
       </div>  
     </div>
     <div class="details-section">
       <div class="container">
         <div class="row">
-          <div class="span12">
+          <div class="span10">
             <span class="subreddit">{{subreddit}}</span> • {{score}} • {{domain}} • {{author}}
           </div>
+          <div class="span2 time">{{time}}</div>
         </div>
       </div>  
+    </div>
+  </script>
+  <script id="titleWithThumbnail" type="text/template">
+    <div class="span2 thumb">
+      <img src="{{thumbnail}}" />
+    </div>
+    <div class="span8 link-title">
+      {{&title}}
+    </div>
+    <div class="span2 comments">
+      <div class="comment-count">{{numComments}}</div>
+      <i class='icon-comment'></i>
+    </div>
+  </script>
+  <script id="titleWithoutThumbnail" type="text/template">
+    <div class="span10 link-title">
+      {{&title}}
+    </div>
+    <div class="span2 comments">
+      <div class="comment-count">{{numComments}}</div>
+      <i class='icon-comment'></i>
     </div>
   </script>
 </div>
