Ellipsises for link detail overflow

--- a/subreddit.html
+++ b/subreddit.html
@@ -17,7 +17,7 @@
     <div class="details-section">
       <div class="container">
         <div class="row">
-          <div class="span10">
+          <div class="span10 meta">
             <span class="subreddit">{{subreddit}}</span> • {{score}} • {{domain}} • {{author}}
           </div>
           <div class="span2 time">{{time}}</div>
