Comment Header is a link when not selfpost. Issue #2

--- a/comments.html
+++ b/comments.html
@@ -26,7 +26,7 @@
   <div class="container">
     <div class="row link-title">
       <div class="span12">
-        {{title}}
+        {{&title}}
       </div>
     </div>
     <div class="row link-details">
