Reversed the angle backets for hidden comments. Issue #2

--- a/comments.html
+++ b/comments.html
@@ -38,7 +38,7 @@
 <script id="commentTemplate" type="text/template">
   <div class="row comment-author" onclick="toggleComment(this)">
     <div class="span">
-      <i class='icon-angle-right'></i> {{author}} • {{score}} • {{time}}
+      <i class='icon-angle-down'></i> {{author}} • {{score}} • {{time}}
     </div>
   </div>
   <div class="row comment-body" style="display: block;">
