Disabled features pushed to milestone 1.1.0

--- a/subreddit.html
+++ b/subreddit.html
@@ -4,7 +4,7 @@
   <div id="listing" style="display: none;"></div>
   <div id="actionBar" data-bb-type="action-bar">
     <div data-bb-type="action" data-bb-style="button" data-bb-img="img/icons/ic_settings.png">Settings</div>
-    <div data-bb-type="action" data-bb-style="button" data-bb-img="img/icons/ic_search.png">Search</div>
+    <!-- <div data-bb-type="action" data-bb-style="button" data-bb-img="img/icons/ic_search.png">Search</div> -->
   </div>
   <script id="linkTemplate" type="text/template">
     <div class="link-section">
