--- a/comments.html
+++ b/comments.html
@@ -7,8 +7,8 @@
     <div id="comments"></div>
   </div>
   <div data-bb-type="action-bar" data-bb-back-caption="Back">
-    <div data-bb-type="action" data-bb-style="button" data-bb-img="img/icons/ic_up.png">Downvote</div>
-    <div data-bb-type="action" data-bb-style="button" data-bb-img="img/icons/ic_down.png">Upvote</div>
+    <!-- <div data-bb-type="action" data-bb-style="button" data-bb-img="img/icons/ic_up.png">Downvote</div>
+    <div data-bb-type="action" data-bb-style="button" data-bb-img="img/icons/ic_down.png">Upvote</div> -->
   </div>
 </div>
 
