Google Adsense Mobile. Issue #6

--- a/subreddit.html
+++ b/subreddit.html
@@ -1,6 +1,19 @@
 <div id="subreddit" data-bb-type="screen">
   <script type="text/javascript" src="js/subreddit.js" onunload="subredditUnload(this)"></script>
   <div id="loading" data-bb-type="activity-indicator" data-bb-size="large"></div>
+  <div id="ads">
+    <script type="text/javascript"><!--
+      google_ad_client = "ca-pub-3618440658775904";
+      /* Snooby Mobile */
+      google_ad_slot = "4576032097";
+      google_ad_width = 320;
+      google_ad_height = 50;
+      //-->
+    </script>
+    <script type="text/javascript"
+      src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+    </script>
+  </div>
   <div id="listing" style="display: none;"></div>
   <div id="actionBar" data-bb-type="action-bar">
     <div data-bb-type="action" data-bb-style="button" data-bb-img="img/icons/ic_settings.png">Settings</div>
