--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"></link>
     <link rel="stylesheet" type="text/css" href="css/styles.min.css"></link>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1.0" />
     <script type="text/javascript" src="local:///chrome/webworks.js"></script>
     <script type="text/javascript" src="js/bbui-min.js"></script>
     <script type="text/javascript" src="js/jquery.min.js"></script>
