Settings page UI. Issue #3

--- a/comments.html
+++ b/comments.html
@@ -1,4 +1,9 @@
 <div data-bb-type="screen" data-bb-indicator="true">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"></link>
+  <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css"></link>
+  <link rel="stylesheet" type="text/css" href="css/bbui-min.css"></link>
+  <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"></link>
+  <link rel="stylesheet" type="text/css" href="css/styles.min.css"></link>
   <script type="text/javascript" src="js/snuownd.js"></script>
   <script type="text/javascript" src="js/comments.js"></script>
   <div id="linkHeader"></div>
