--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="js/moment.min.js"></script>
     <script type="text/javascript" src="js/bbui-reddit.js"></script>
     <script type="text/javascript" src="js/reddit.js"></script>
+    <script type="text/javascript" src="js/snooby.js"></script>
     <script type="text/javascript">
       function ready() {
         alert('blocking dialog to start web inspector');
@@ -33,14 +34,16 @@
         subreddits(null, function() {
           bb.init({ 
             ondomready: function(element, id, params) {
-              if (id == 'subreddit') {
+              if (id == 'subreddit')
                 subredditDomReady(element, params);
-              } else if (id == 'comments')
+              else if (id == 'comments')
                 commentsScreenReady(element, params);
             }, 
             onscreenready: function(element, id, params) {
-              if (id == 'subreddit')
+              if (id === 'subreddit')
                 subredditScreenReady(element, params);
+              else if (id === 'settings')
+                _settings.onScreenReady(element, params);
             }
           });
 
