Login/Log out functionality. Issue #3.

--- a/settings.html
+++ b/settings.html
@@ -26,7 +26,7 @@
     <div data-bb-type="panel-header">Reddit Account</div>
     <div id="currentLogin"></div>
     <div data-bb-type="label-control-horizontal-row">
-      <div id="loginButton" data-bb-type="button" onclick="_settings.doLogout()">
+      <div id="logoutButton" data-bb-type="button" onclick="_settings.doLogout()">
         <i class="icon-signout"> Log Out</i>
       </div>
     </div>
