Removes unnecessary loading indicators. #11

--- a/subreddit.html
+++ b/subreddit.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"></link>
   <link rel="stylesheet" type="text/css" href="css/styles.min.css"></link>
   <script type="text/javascript" src="js/subreddit.js" onunload="subredditUnload(this)"></script>
-  <div id="loading" data-bb-type="activity-indicator" data-bb-size="large"></div>
+  <div id="loading" style="display: none" data-bb-type="activity-indicator" data-bb-size="large"></div>
   <div id="ads">
     <script type="text/javascript"><!--
       google_ad_client = "ca-pub-3618440658775904";
