Move the refresh button.

--- a/subreddit.html
+++ b/subreddit.html
@@ -21,8 +21,10 @@
   </div>
   <div id="listing" style="display: none;"></div>
   <div id="actionBar" data-bb-type="action-bar">
+    <div data-bb-type="action" 
+         onclick="document.getElementById('actionBar').setSelectedTab(document.getElementById('tab-' + window.subredditState.subreddit))" 
+         data-bb-style="button" data-bb-img="img/icons/ic_rotate.png">Refresh</div>
     <div data-bb-type="action" onclick="bb.pushScreen('settings.html', 'settings');" data-bb-style="button" data-bb-img="img/icons/ic_settings.png">Settings</div>
-    <div data-bb-type="action" onclick="document.getElementById('actionBar').setSelectedTab(document.getElementById('tab-' + window.subredditState.subreddit))" data-bb-style="button" data-bb-img="img/icons/ic_rotate.png">Refresh</div>
     <!-- <div data-bb-type="action" data-bb-style="button" data-bb-img="img/icons/ic_search.png">Search</div> -->
   </div>
   <script id="linkTemplate" type="text/template">
