--- a/subreddit.html
+++ b/subreddit.html
@@ -5,20 +5,7 @@
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"></link>
   <link rel="stylesheet" type="text/css" href="css/styles.min.css"></link>
   <script type="text/javascript" src="js/subreddit.js" onunload="subredditUnload(this)"></script>
-  <div id="loading" style="display: none" data-bb-type="activity-indicator" data-bb-size="large"></div>
-  <div id="ads">
-    <script type="text/javascript"><!--
-      google_ad_client = "ca-pub-3618440658775904";
-      /* Snooby Mobile */
-      google_ad_slot = "4576032097";
-      google_ad_width = 320;
-      google_ad_height = 50;
-      //-->
-    </script>
-    <script type="text/javascript"
-      src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-    </script>
-  </div>
+  <div id="loading" style="display: none;" data-bb-type="activity-indicator" data-bb-size="large"></div>
   <div id="listing" style="display: none;"></div>
   <div id="actionBar" data-bb-type="action-bar">
     <div data-bb-type="action" 
@@ -67,8 +54,3 @@
       <i class='icon-comment'></i>
     </div>
   </script>
-</div>
-
-<script type="text/javascript">
-</script>
-
