--- a/subreddit.html
+++ b/subreddit.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" type="text/css" href="css/bbui-min.css"></link>
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"></link>
   <link rel="stylesheet" type="text/css" href="css/styles.min.css"></link>
-  <script type="text/javascript" src="js/subreddit.js" onunload="subredditUnload(this)"></script>
+  <script type="text/javascript" src="js/subreddit.js" onunload="_subreddits.onUnload(this)"></script>
   <div id="loading" style="display: none;" data-bb-type="activity-indicator" data-bb-size="large"></div>
   <div id="listing" style="display: none;"></div>
   <div id="actionBar" data-bb-type="action-bar">
