Global cache vars moved to _cache namespace. #9

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/mustache.js"></script>
     <script type="text/javascript" src="js/moment.min.js"></script>
+    <script type="text/javascript" src="js/cache.js"></script>
     <script type="text/javascript" src="js/bbui-reddit.js"></script>
     <script type="text/javascript" src="js/snooby.js"></script>
     <script type="text/javascript">
       function ready() {
+        alert('wtf');
         moment.relativeTime = {
           future: '%s',
           past: '%s',
