--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -10,6 +10,7 @@
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
   <script type="text/javascript" src="lib/sinon-1.5.2.js"></script>
   <script type="text/javascript" src="../js/jquery.min.js"></script>
+  <script type="text/javascript" src="../js/cache.js"></script>
 
   <!-- include source files here... -->
   <script type="text/javascript" src="../js/snooby.js"></script>
